# connected-vehicle-samples

./: .gitignore  CDM-silver-to-gold-vausage.ipynb  README.md  bronze-to-silver-telemetry.ipynb  bronze-to-silver-vausage.ipynb  rate-streaming-to-bronze.ipynb  silver-to-gold-vausage.ipynb
Deployment/: ConnectedVehicleARMTemplate.json
Tools/: connectedvehicleextensions-1.0.0-preview.vsix  readme.md
Tools/samples/: SimpleTelemetryHandler.cs
Tools/samples/.mcvp/My.Extensions.GetLastLocationCommand/: LastKnownLocationTest.jsonc
Tools/samples/.mcvp/My.Extensions.SimpleTelemetryHandler/: TelemetryMessageWithLocationTest.jsonc
analytics/: notebooks
analytics/notebooks/: CDM-silver-to-gold-vausage.ipynb  TODELETE  bronze-to-silver-telemetry.ipynb  bronze-to-silver-vausage.ipynb  rate-streaming-to-bronze.ipynb  readme.md  silver-to-gold-vausage.ipynb
analytics/notebooks/sample-notebooks/: CDM-silver-to-gold-vausage.ipynb  bronze-to-silver-telemetry.ipynb  bronze-to-silver-vausage.ipynb  rate-streaming-to-bronze.ipynb  silver-to-gold-vausage.ipynb  to-delete
analytics/notebooks/templates/: adls2storageaccounttemplate.json  alds2storageaccountparameters.json  sparkpoolparameters.json  sparkpooltemplate.json
deployment/: Add-ExtensionToCVPInstance.ps1  ConnectedVehicleARMTemplate.json  CustomerResources.parameters.json  CustomerResources.template.json  Deploy-SampleClaimsProvider.ps1  DiagnosticLogsArmTemplate.json  MultiExtensionCVPARMTemplate.json  Next1_MultiExtensionCVPARMTemplate.json  Next_MultiExtensionCVPARMTemplate.json  SharedCustomerReources.template.json
deployment/SampleClaimsProvider/: .gitignore  ClaimsProviderStore.cs  Constants.cs  CosmosDBConnectionString.cs  IClaimsProviderStore.cs  Program.cs  SampleClaimsProvider.csproj  SampleClaimsProvider.sln  Startup.cs  appsettings.Development.json  appsettings.json
deployment/SampleClaimsProvider/Controllers/: ClaimsStoreController.cs  HealthCheckController.cs
deployment/SampleClaimsProvider/Controllers/V20210519/: ClaimsProviderController.cs
deployment/SampleClaimsProvider/Models/: ApiVersions.cs  ClaimsDocument.cs  ClaimsRequest.cs  ClaimsResult.cs  ClaimsStoreRequest.cs  DocumentIdCreator.cs  Headers.cs  LabeledClaimsResult.cs  NamingRestrictions.cs  StringClaim.cs  VehicleUserInfo.cs
deployment/SampleClaimsProvider/SampleClaimsProvider/: AddClaimsFunction.cs  Constants.cs  RetrieveClaimsFunction.cs
deployment/SampleClaimsProvider/SampleClaimsProvider/Models/: VehicleDeviceClaims.cs
invehicle/FileUpload/: CMakeLists.txt  README.md  clangtidy_suppressions.json
invehicle/FileUpload/docker/linux/amd64/: Dockerfile
invehicle/FileUpload/handlers/: blob_uri_handler.cpp
invehicle/FileUpload/handlers/include/: blob_upload_handler.h  blob_uri_handler.h
invehicle/FileUpload/processors/: delete_processor.cpp  module_message_processor.cpp
invehicle/FileUpload/processors/include/: delete_processor.h  upload_process_message.h  upload_processor.h
samples/workloads/modules/sample_monitor_module/: SampleMonitor.py
tools/cvpdeployment/: .gitignore  Add-ExtensionToCVPInstance.ps1  ArrayParameterExperimentation.json  ConnectedVehicleARMTemplate.json  Deploy-SampleClaimsProvider.ps1  FunctionAppARMTemplate.json  ManageClaims.ps1  SampleClaimsProviderARMTemplate.json  Test-ArrayParameters.ps1
tools/cvpdeployment/BareBonesClaimsProvider/BareBonesClaimsProvider/: BareBonesClaimsProvider.sln
tools/cvpdeployment/SampleClaimsProvider/SampleClaimsProvider/: AddClaimsFunction.cs  ClaimsProviderStore.cs  Extensions.cs  RemoveClaimsFunction.cs  RetrieveClaimsFunction.cs  Startup.cs
tools/devex/: readme.md
tools/devex/samples/: GetLastLocationCommand.cs  samples.csproj
tools/devex/samples/FileUpload/: README.md  main.cpp
(+25 files in other folders)
